eks-yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: test-app
