eks-yaml/service-loadbalancer.yaml
# Web (Frontend) Service 설정
apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Network Load Balancer 사용 (또는 "alb")
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  labels:
    app: web
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
---
# WAS (Backend) Service 설정
apiVersion: v1
kind: Service
metadata:
  name: was-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  labels:
    app: was
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: was
